# SimpleDiffusionModel

./: .gitignore  README.md  Untitled1.ipynb  Untitled2.ipynb  diffusers.py  noise_models.py  pyproject.toml  samplers.py  tmp.ipynb  tmp.py  tmp2.py  train_mnist.py  utils.py
datasets_generators/: curves.py
models/: FNN.py  UNet1d.py  UNet2d.py  models.py  time_embedding.py
