[tool.poetry]
name = "simplediffusionmodel"
version = "0.1.0"
description = ""
authors = ["sho-okumoto <115537918+sho-okumoto@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^4.0.4"
notebook = "^7.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
